<resources>
    <string name="app_name">NetExam</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="test">@null</string>
    <string name="authorization">Авторизация</string>
    <string name="submit">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="remember">Запомнить</string>
    <string name="lastName">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество (при наличии)</string>
    <string name="department">Название кафедры</string>
    <string name="position">Должность</string>
    <string name="passwordConfirm">Подтверждение пароля</string>
    <string name="toRegister">Зарегистрироваться</string>
    <string name="semester">Номер семестра</string>
    <string name="group">Группа</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="available_exams">Доступные экзамены</string>
    <string name="passed_exams">Сданные экзамены</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="exams_available_textview_error">Ошибка получения данных</string>
    <string name="begin"><u>НАЧАТЬ</u></string>
    <string name="retry">Повторить попытку</string>
    <string name="no_available_exams">Нет доступных экзаменов</string>
    <string name="no_passed_exams">Нет сданных экзаменов</string>
    <string name="connection_error">Произошла ошибка подключения.\nПроверьте интернет соединение</string>
    <string name="cd_refresh">Refresh exams button</string>
    <string name="graduated_student_hat">graduated_student_hat</string>
    <string name="timer_icon">timer icon</string>
    <string name="questions">Вопросы:</string>
    <string name="question_has_your_answer">question has your answer</string>
    <string name="question">Вопрос\u0020</string>
    <string name="no_such_login">Такого логина не существует.</string>
    <string name="wrong_login">Поле \"Логин\" пустое или заполнено некорректно</string>
    <string name="wrong_password">Поле \"Пароль\" пустое или заполнено некорректно</string>
    <string name="no_such_password">Неверный пароль</string>
    <string name="define_position">Укажите должность.</string>
    <string name="define_department">Укажите кафедру.</string>
    <string name="wrong_name">Поле \"Имя\" пустое или заполнено некорректно</string>
    <string name="wrong_last_name">Поле \"Фамилия\" пустое или заполнено некорректно</string>
    <string name="wrong_patronymic">Отчество введено некорректно.</string>
    <string name="login_already_exists">Такой логин уже существует.</string>
    <string name="define_group">Укажите группу</string>
    <string name="wrong_semester">Семестр указан некорректно</string>
    <string name="server_error">Ошибка сервера. Повторите попытку позже.</string>
    <string name="person_error">Допустимы русские буквы, дефис и пробелы</string>
    <string name="login_error">Допустимы цифры, русские и латинские буквы</string>
    <string name="semester_error">Допустимы только цифры</string>
    <string name="group_error">Допустимы цифры, русские буквы и дефис</string>
    <string name="password_match_error">Пароли не совпадают</string>
    <string name="password_length_error">Мин. длина пароля - 8 символов</string>
    <string name="empty_error">Не может быть пустым</string>
    <string name="available_exams_questions">Вопросы:\u0020</string>
    <string name="available_exams_time">Время:\u0020</string>
    <string name="available_exam_mins">\u0020мин</string>
    <string name="unknown_error">Неизвестная ошибка. Повторите попытку позже</string>
    <string name="student">Студент</string>
    <string name="end_exam">Завершить</string>
    <string name="summary">Итог</string>
    <string name="end_exam_questions">Вопросы:</string>
    <string name="student_semester">\u0020семестр</string>
    <string name="exam_finishing">Завершение экзамена…</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="finish_exam">Finish exam</string>
    <string name="protocol">Протокол ответов</string>
    <string name="teacher">Преподаватель</string>
    <string name="subject">Предмет</string>
    <string name="results">Результаты</string>
    <string name="token_refresh_error">Ошибка входа/nПерезайдите</string>
    <string name="retry_snackbar">ПОВТОРИТЬ</string>
    <string name="unknown_error_relaunch_app">Неизвестная ошибка. Перезапустите приложение.</string>
    <string name="error_result_check_internet">Р-тат не получен. Проверьте доступ к сети.</string>
    <string name="exam_expiration">Экзамен уже окончен, р-таты не отправлены!</string>
    <string name="ok">ОК</string>
    <string name="getting_results">Получение результатов…</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="skipped">Пропущен</string>
</resources>
