<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="kstarostin.thumbtack.net.netexam.ui.entry.fragments.AuthorizationFragment"
    android:background="@color/main_background">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/standard_card_corner_radius"
        app:contentPadding="@dimen/outer_card_content_padding"
        app:cardBackgroundColor="@color/outer_card_background"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:cardUseCompatPadding="true"
            app:cardCornerRadius="@dimen/standard_card_corner_radius"
            app:contentPadding="@dimen/inner_card_content_padding">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_TIL">
                <EditText
                    android:layout_width="@dimen/auth_login_width"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/loginField"
                    android:hint="@string/login" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_TIL"
                    app:passwordToggleEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordField"
                    android:hint="@string/password" />
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:text="@string/remember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rememberMe" />

                <Button
                    android:text="@string/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_login"
                    android:background="@color/auth_login_button"
                    android:textSize="14sp" />

                <Button
                    android:layout_marginTop="@dimen/auth_register_margin"
                    android:text="@string/registration"
                    android:background="@color/auth_register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_registration"
                    android:textSize="14sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>
</RelativeLayout>
