<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="kstarostin.thumbtack.net.netexam.ui.entry.fragments.RegistrationFragment">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:cardUseCompatPadding="true"
        card_view:cardCornerRadius="@dimen/standard_card_corner_radius"
        card_view:contentPaddingLeft="@dimen/registration_field_side_content_padding"
        card_view:contentPaddingRight="@dimen/registration_field_side_content_padding"
        card_view:cardBackgroundColor="@color/outer_card_background"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:cardUseCompatPadding="true"
            card_view:cardCornerRadius="@dimen/standard_card_corner_radius"
            card_view:contentPadding="@dimen/inner_card_content_padding">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/sfamily"
                        android:layout_width="@dimen/register_input_field_width"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/lastName"
                        android:inputType="text"
                        android:textSize="@dimen/registration_field_font_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/sname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:textSize="@dimen/registration_field_font_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/spatronymic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/patronymic"
                        android:inputType="text"
                        android:textSize="@dimen/registration_field_font_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/group"
                        android:inputType="text"
                        android:textSize="@dimen/registration_field_font_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/semester"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/semester"
                        android:inputType="numberDecimal"
                        android:textSize="@dimen/registration_field_font_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_id">

                    <EditText
                        android:id="@+id/slogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/login"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/registration_field_font_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/spassword1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/registration_field_font_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/spassword2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/passwordConfirm"
                        android:inputType="textPassword"
                        android:textSize="@dimen/registration_field_font_size" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v7.widget.CardView>

</RelativeLayout>
