<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="kstarostin.thumbtack.net.netexam.ui.entry.fragments.RegistrationFragment">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:cardUseCompatPadding="true"
        card_view:cardCornerRadius="@dimen/standard_card_corner_radius"
        card_view:contentPaddingLeft="@dimen/registration_field_side_content_padding"
        card_view:contentPaddingRight="@dimen/registration_field_side_content_padding"
        card_view:cardBackgroundColor="@color/outer_card_background"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:cardUseCompatPadding="true"
            card_view:cardCornerRadius="@dimen/standard_card_corner_radius"
            card_view:contentPadding="@dimen/inner_card_content_padding">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="@dimen/register_input_field_width"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:textSize="@dimen/registration_field_font_size"
                        android:id="@+id/pfamily"
                        android:hint="@string/lastName" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:textSize="@dimen/registration_field_font_size"
                        android:id="@+id/pname"
                        android:hint="@string/name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/registration_field_font_size"
                        android:ems="10"
                        android:id="@+id/ppatronymic"
                        android:hint="@string/patronymic" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/registration_field_font_size"
                        android:ems="10"
                        android:id="@+id/department"
                        android:hint="@string/department" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:textSize="@dimen/registration_field_font_size"
                        android:id="@+id/position"
                        android:hint="@string/position" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:textSize="@dimen/registration_field_font_size"
                        android:id="@+id/plogin"
                        android:hint="@string/login" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/registration_field_font_size"
                        android:ems="10"
                        android:id="@+id/ppassword1"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/registration_field_font_size"
                        android:ems="10"
                        android:id="@+id/ppassword2"
                        android:hint="@string/passwordConfirm"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v7.widget.CardView>

</RelativeLayout>
